Aligning total amount to right side
Aligned total amount to right side in sales and receiving receipts

--- a/css/thickbox.css
+++ b/css/thickbox.css
@@ -33,6 +33,9 @@
 	height:100%;
 	width:100%;
 }
+.total-value{
+	text-align:right;
+}
 
 .TB_overlayMacFFBGHack {background: url(macFFBgHack.png) repeat;}
 .TB_overlayBG {
